--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
       # Step 2: create virtual env and install dependencies
       - run:
           name: install dependencies
-          command:
+          command: |
             python3 -m venv venv
             . venv/bin/activate
             pip install -r requirements.txt
